# pytripletex

./: .gitignore  README.md  pyproject.toml
scripts/: release.sh
src/tripletex/: __init__.py  client.py  config.py  models.py  session.py
src/tripletex/auth/: __init__.py  api_token.py  manual.py  visma_connect.py
src/tripletex/cli/: main.py
src/tripletex/endpoints/: companies.py  customers.py  inbox.py  invoices.py  orders.py  payments.py  products.py  reconciliation.py  vouchers.py  wages.py
src/tripletex/parsers/: html.py  js.py
tests/: conftest.py  test_config.py  test_parsers.py  test_session.py  test_visma_connect.py
tests/fixtures/: employeeSalary.html  js_redirect.html  listRemits.html  login_page.html  voucher_page.html  wageSettings.html
