[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripletex"
dynamic = ["version"]
description = "Python client for Tripletex accounting (web scraping + internal APIs)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
tripletex = "tripletex.cli.main:cli"

[tool.hatch.version]
path = "src/tripletex/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tripletex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
